# codinginblind

./: .buildinfo  404.html  CNAME  README.md  about.html  genindex.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  searchindex.js  sitemap.xml
.doctrees/: about.doctree  environment.pickle  index.doctree
.doctrees/articles/: getting_started_with_python.doctree  index.doctree  learning_narrator.doctree  python_python3.doctree  very_basic_venv.doctree
.github/workflows/: sphinx.yml
_sources/: about.md.txt  index.md.txt
_sources/articles/: index.md.txt  learning_narrator.md.txt  very_basic_venv.md.txt
about/: index.html
articles/: getting_started_with_python.html  index.html  learning_narrator.html  python_python3.html  very_basic_venv.html
articles/be_my_eyes_on_windows/: index.html
articles/getting_started_with_python/: index.html
articles/python_python3/: index.html
articles/python_variable_scope_and_f12/: index.html
articles/using_command_line/: index.html
articles/very_basic_venv/: index.html
docs/: about.md  conf.py  index.md
docs/articles/: be_my_eyes_on_windows.md  getting_started_with_python.md  index.md  learning_narrator.md  python_python3.md  python_variable_scope_and_f12.md  using_command_line.md  very_basic_venv.md
search/: search_index.json
src/python/: basic_scope.py
